fix(post header): reduce spacing below title on mobile

--- a/site/css/page.scss
+++ b/site/css/page.scss
@@ -159,7 +159,9 @@
         }
         .article-header {
             padding-top: 2 * $vertical-spacing;
-            padding-bottom: $vertical-spacing;
+            @include md-up {
+                padding-bottom: $vertical-spacing;
+            }
         }
         h1 {
             font-size: clamp(2rem, 5vw, 3rem);
